--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -1,12 +1,7 @@
 name: 'Deploy to prod'
 
 on:
-  workflow_dispatch:
-    inputs:
-      deploytag:
-        description: 'Deploy Tag'
-        required: true
-        type: tag
+  workflow_dispatch: {}
 
 env:
   KUBECONFIG: /tmp/github-ci.kubeconfig
@@ -18,6 +13,9 @@ jobs:
     environment: prod
     runs-on: ubuntu-latest
     steps:
+      - name: Ensure we are running on a tag
+        run: |
+          test '${{ github.ref_type }}' == 'tag'
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup
         with:
