--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -1,33 +1,29 @@
-name: 'Deploy to prod'
-
-on:
-  workflow_dispatch: {}
-
 env:
   KUBECONFIG: /tmp/github-ci.kubeconfig
   REGISTRY: registry.cloudscale-lpg-2.appuio.cloud
   TEST_DOMAIN: apps.cloudscale-lpg-2.appuio.cloud
-
 jobs:
-  builddeploy:
+  deploy:
     environment: prod
     runs-on: ubuntu-latest
     steps:
-      - name: Ensure we are running on a tag
-        run: |
-          test '${{ github.ref_type }}' == 'tag'
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup
-        with:
-          KUBECONFIG_DATA: ${{ secrets.KUBECONFIG_PROD }}
-      - name: Generate Deployment
-        env:
-          NEWLINE: "\n" # just a workaround to get a newline into the command below
-        run: |
-          jq -r 'to_entries | map("\(.key)=\(.value|tostring|tojson)") | .[]' > .composeenv <<'EOF' ${{ env.NEWLINE }}${{ toJson(secrets) }}${{ env.NEWLINE }}EOF
-          docker run -v "${PWD}:/data" -w /data --env-file <(env) quay.io/vshn/k8ify:latest /bin/k8ify prod prod --shell-env-file .composeenv
-          rm .composeenv
-          kubectl diff -f manifests/ || true
-      - name: Deploy
-        run: |
-          kubectl apply -f manifests/ || true
+    - name: Ensure we are running on a tag
+      run: "test '${{ github.ref_type }}' == 'tag'"
+    - uses: actions/checkout@v3
+    - uses: ./.github/actions/setup
+      with:
+        KUBECONFIG_DATA: "${{ secrets.KUBECONFIG_PROD }}"
+    - env:
+        NEWLINE: |2+
+
+      name: Generate Deployment
+      run: |
+        jq -r 'to_entries | map("\(.key)=\(.value|tostring|tojson)") | .[]' > .composeenv <<'EOF' ${{ env.NEWLINE }}${{ toJson(secrets) }}${{ env.NEWLINE }}EOF
+        docker run -v "${PWD}:/data" -w /data --env-file <(env) quay.io/vshn/k8ify:latest /bin/k8ify test prod --shell-env-file .composeenv --modified-image '${{ env.NAMESPACE }}/${{ env.CI_PROJECT_NAME }}:${{ env.CI_COMMIT_REF_SLUG }}'
+        rm .composeenv
+        kubectl diff -f manifests/ || true
+    - name: Deploy
+      run: kubectl apply -f manifests/ || true
+name: Deploy to prod
+"on":
+  workflow_dispatch: {}
