--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -17,9 +17,10 @@ jobs:
     - env:
         NEWLINE: |2+
 
-      name: Generate Deployment
+      name: k8ify preview
       run: |
-        jq -r 'to_entries | map("\(.key)=\(.value|tostring|tojson)") | .[]' > .composeenv <<'EOF' ${{ env.NEWLINE }}${{ toJson(secrets) }}${{ env.NEWLINE }}EOF
+        jq -r 'try to_entries | map("\(.key)=\(.value|tostring|tojson)") | .[]' > .composeenv <<'EOF' ${{ env.NEWLINE }}${{ toJson(vars) }}${{ env.NEWLINE }}EOF
+        jq -r 'try to_entries | map("\(.key)=\(.value|tostring|tojson)") | .[]' >> .composeenv <<'EOF' ${{ env.NEWLINE }}${{ toJson(secrets) }}${{ env.NEWLINE }}EOF
         docker run -v "${PWD}:/data" -w /data --env-file <(env) ghcr.io/vshn/k8ify-appcat:latest /bin/k8ify prod prod --shell-env-file .composeenv --modified-image '${{ env.NAMESPACE }}/${{ env.CI_PROJECT_NAME }}:${{ env.CI_COMMIT_REF_SLUG }}'
         rm .composeenv
         kubectl diff -f manifests/ || true
@@ -29,3 +30,4 @@ name: Build and preview deployment to prod
     tags:
     - '**'
     tags_ignore: []
+  workflow_dispatch: {}
