--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: ./.github/actions/build
       with:
         REGISTRY: "${{ env.REGISTRY }}"
+        IMGNAME: "${{ env.CI_PROJECT_NAME }}"
     - env:
         NEWLINE: |2+
 
