--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -13,6 +13,7 @@ runs:
   - run: |
       echo "NAMESPACE=$(yq '.contexts.0.context.namespace' ${KUBECONFIG})" >> $GITHUB_ENV
       echo "CI_COMMIT_REF_SLUG=$(echo '${{ github.ref_name }}' | sed -e 's/.*/\L&/' -e 's/[^a-z0-9]/-/g' -e 's/^[0-9-]*//' -e 's/-*$//' -e 's/-\+/-/g')" >> $GITHUB_ENV
+      echo "CI_PR_HEAD_REF_SLUG=$(echo '${{ github.head_ref }}' | sed -e 's/.*/\L&/' -e 's/[^a-z0-9]/-/g' -e 's/^[0-9-]*//' -e 's/-*$//' -e 's/-\+/-/g')" >> $GITHUB_ENV
       echo "CI_PROJECT_NAME=$(echo '${{ github.repository }}' | sed -e 's/^[^\/]\+\///')" >> $GITHUB_ENV
     shell: bash
   using: composite
