--- a/.github/workflows/test-stop.yml
+++ b/.github/workflows/test-stop.yml
@@ -12,8 +12,8 @@ jobs:
     - env: {}
       name: k8ify stop
       run: |
-        kubectl delete deployments,statefulsets,secrets,persistentvolumeclaims,ingresses,services,cronjobs -l "k8ify.ref-slug=${CI_COMMIT_REF_SLUG}"
-        kubectl delete claim -l "k8ify.ref-slug=${CI_COMMIT_REF_SLUG}" || true
+        kubectl delete deployments,statefulsets,secrets,persistentvolumeclaims,ingresses,services,cronjobs -l "k8ify.ref-slug=${CI_PR_HEAD_REF_SLUG}"
+        kubectl delete claim -l "k8ify.ref-slug=${CI_PR_HEAD_REF_SLUG}" || true
 name: Stop test
 "on":
   pull_request:
