--- a/.github/workflows/test-stop.yml
+++ b/.github/workflows/test-stop.yml
@@ -16,7 +16,5 @@ jobs:
         kubectl delete claim -l "k8ify.ref-slug=${CI_PR_HEAD_REF_SLUG}" || true
 name: Stop test
 "on":
-  pull_request:
-    types:
-    - closed
+  delete: {}
   workflow_dispatch: {}
