fix: Configure target cluster domain

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -9,3 +9,6 @@ services:
         reservations:
           cpus: "0.01"
           memory: 256M
+
+x-targetCfg:
+  appsDomain: "*.apps.cloudscale-lpg-2.appuio.cloud"
