--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -12,12 +12,12 @@ runs:
     shell: bash
   - run: |
       echo "NAMESPACE=$(yq '.contexts.0.context.namespace' ${KUBECONFIG})" >> $GITHUB_ENV
-      echo "CI_COMMIT_REF_SLUG=$(echo '${{ github.ref_name }}' | sed -e 's/.*/\L&/' -e 's/[^a-z0-9]/-/g' -e 's/^[0-9-]*//' -e 's/-*$//' -e 's/-\+/-/g')" >> $GITHUB_ENV
       if [ "${{ github.event_name }}" == "delete" ]; then
-        echo "CI_COMMIT_REF_SLUG=$(echo '${{ github.event.ref }}' | sed -e 's,^/ref/[a-z]\+/,,' | sed -e 's/.*/\L&/' -e 's/[^a-z0-9]/-/g' -e 's/^[0-9-]*//' -e 's/-*$//' -e 's/-\+/-/g')" >> $GITHUB_ENV
+        REF="$(echo '${{ github.event.ref }}' | sed -e 's,^/ref/[a-z]\+/,,')"
       else
-        echo "CI_COMMIT_REF_SLUG=$(echo '${{ github.ref_name }}' | sed -e 's/.*/\L&/' -e 's/[^a-z0-9]/-/g' -e 's/^[0-9-]*//' -e 's/-*$//' -e 's/-\+/-/g')" >> $GITHUB_ENV
+        REF="$(echo '${{ github.ref_name }}')"
       fi
+      echo "CI_COMMIT_REF_SLUG=$(echo "${REF}" | sed -e 's/.*/\L&/' -e 's/[^a-z0-9]/-/g' -e 's/^[0-9-]*//' -e 's/-*$//' -e 's/-\+/-/g')" >> $GITHUB_ENV
       echo "CI_PROJECT_NAME=$(echo '${{ github.repository }}' | sed -e 's/^[^\/]\+\///')" >> $GITHUB_ENV
     shell: bash
   using: composite
